fixed overflow errors

--- a/public/client/assets/scss/app.scss
+++ b/public/client/assets/scss/app.scss
@@ -142,9 +142,8 @@ button.warn {
   margin: 0;
   padding-bottom: 1em;
   width: 100%;
-  overflow: hidden;
-  // overflow-x: scroll;
-  // overflow-y: hidden;
+  overflow-x: scroll;
+  overflow-y: hidden;
   white-space : nowrap;
 }
 
